tests/baselines/reference/parserFunctionDeclaration3.errors.txt
parserFunctionDeclaration3.ts(1,10): error TS2391: Function implementation is missing or not immediately following the declaration.
parserFunctionDeclaration3.ts(1,10): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.


==== parserFunctionDeclaration3.ts (2 errors) ====
    function foo();
             ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
             ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.